--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.ru.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.ru.yml
@@ -81,6 +81,6 @@ Timezone: Часовой пояс
 'Host is UTC': 'UTC хоста'
 'Set IP Mask': 'Установить IP маску'
 'IANA Country Code': 'IANA код страны'
-'Verify Settings': '__Проверка настроек'
-'Enable IPv6 DNS': '__Включить IPv6 DNS'
-'Do you want to Enable IPv6 DNS?': '__Вы хотите включить IPv6 DNS?'
+'Verify Settings': 'Проверка настроек'
+'Enable IPv6 DNS': 'Включить IPv6 DNS'
+'Do you want to Enable IPv6 DNS?': 'Вы хотите включить IPv6 DNS?'
