--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.da.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.da.yml
@@ -54,7 +54,7 @@
 'Please enter the web admin password': 'Indtast admin adgangskode for web interface'
 'Please re-enter the web admin password': 'Indtast admin adgangskode for web interface igen'
 'Web Admin Password': 'Web Admin adgangskode'
-'Please enter the username for the admin console interface': 'Indtast admin brugernavn for Konsol interfac'
+'Please enter the username for the admin console interface': 'Indtast admin brugernavn for Konsol interface'
 'Console Admin Username': 'Konsol Admin brugernavn'
 'Please enter the console admin password': 'Indtast admin adgangskode for konsol interface'
 'Please re-enter the console admin password': 'Indtast admin adgangskode for konsol interface igen'
@@ -82,5 +82,5 @@
 'Set IP Mask': 'Sæt IP Mask'
 'IANA Country Code': 'IANA landekode'
 'Verify Settings': 'Bekræft Indstillinger'
-'Enable IPv6 DNS': '__Enable IPv6 DNS'
-'Do you want to Enable IPv6 DNS?': '__Do you want to Enable IPv6 DNS?'
+'Enable IPv6 DNS': 'Aktiver IPv6 DNS'
+'Do you want to Enable IPv6 DNS?': 'Til du aktivere IPv6 DNS?'
