--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/validators.tr.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/validators.tr.yml
@@ -1,3 +1,3 @@
-'Enter a valid hostname': '__Enter a valid hostname'
-'Passwords do not match': '__Passwords do not match'
-'Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address': '__Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address'
+'Enter a valid hostname': 'Geçerli bir sunucu adı girin.'
+'Passwords do not match': 'Parolalar eşleşmedi'
+'Web Username must be alphanumeric (up to 30 characters starting with a letter or _) or a valid email address': 'Web kullanıcı adı alfanümerik olmalı (en fazla 30 karakter, harf veya _ ile başlamalı) yada elektronik posta adresi'
