--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.da.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.da.yml
@@ -83,4 +83,4 @@
 'IANA Country Code': 'IANA landekode'
 'Verify Settings': 'Bekræft Indstillinger'
 'Enable IPv6 DNS': 'Aktiver IPv6 DNS'
-'Do you want to Enable IPv6 DNS?': 'Til du aktivere IPv6 DNS?'
+'Do you want to Enable IPv6 DNS?': 'Vil du aktivere IPv6 DNS?'
