--- a/debbuild/clamav-unofficial-sigs/debian/changelog
+++ b/debbuild/clamav-unofficial-sigs/debian/changelog
@@ -1,5 +1,5 @@
-clamav-unofficial-sigs (7.2.5-1) unstable; urgency=low
+clamav-unofficial-sigs (7.2.5-1+nmu1) unstable; urgency=low
 
-  * Initial release 
+  * Non-maintainer upload
 
  -- Shawn Iverson <shawniverson@efa-project.org>  Sun, 15 Aug 2021 11:14:17 -0400
